<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/backbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.206" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="87dp"
        android:layout_height="92dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:srcCompat="@drawable/telegram" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="89dp"
        android:layout_height="88dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="108dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pochta" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="161dp"
        android:layout_height="39dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="136dp"
        android:text="@string/mail"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="168dp"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/telegram"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/contacts"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>